--- a/.github/superlinter.yml
+++ b/.github/superlinter.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checks out a copy of your repository on the ubuntu-latest machine
+      # Checks out a copy of your repository on the ubuntu-latest machine. Silly change
       - name: Checkout code
         uses: actions/checkout@v2
 
